tests/ui/delegation/recursive-delegation-errors.stderr
error: failed to resolve delegation callee
  --> $DIR/recursive-delegation-errors.rs:4:11
   |
LL |     reuse foo;
   |           ^^^

error: encountered a cycle during delegation signature resolution
  --> $DIR/recursive-delegation-errors.rs:10:11
   |
LL |     reuse foo as bar;
   |           ^^^

error: encountered a cycle during delegation signature resolution
  --> $DIR/recursive-delegation-errors.rs:12:11
   |
LL |     reuse bar as foo;
   |           ^^^

error: encountered a cycle during delegation signature resolution
  --> $DIR/recursive-delegation-errors.rs:17:11
   |
LL |     reuse foo as foo1;
   |           ^^^

error: encountered a cycle during delegation signature resolution
  --> $DIR/recursive-delegation-errors.rs:19:11
   |
LL |     reuse foo1 as foo2;
   |           ^^^^

error: encountered a cycle during delegation signature resolution
  --> $DIR/recursive-delegation-errors.rs:21:11
   |
LL |     reuse foo2 as foo3;
   |           ^^^^

error: encountered a cycle during delegation signature resolution
  --> $DIR/recursive-delegation-errors.rs:23:11
   |
LL |     reuse foo3 as foo4;
   |           ^^^^

error: encountered a cycle during delegation signature resolution
  --> $DIR/recursive-delegation-errors.rs:25:11
   |
LL |     reuse foo4 as foo5;
   |           ^^^^

error: encountered a cycle during delegation signature resolution
  --> $DIR/recursive-delegation-errors.rs:27:11
   |
LL |     reuse foo5 as foo;
   |           ^^^^

error: encountered a cycle during delegation signature resolution
  --> $DIR/recursive-delegation-errors.rs:33:22
   |
LL |         reuse Trait::foo as bar;
   |                      ^^^

error: encountered a cycle during delegation signature resolution
  --> $DIR/recursive-delegation-errors.rs:36:22
   |
LL |         reuse Trait::bar as foo;
   |                      ^^^

error: encountered a cycle during delegation signature resolution
  --> $DIR/recursive-delegation-errors.rs:43:30
   |
LL |     reuse super::fifth_mod::{bar as foo, foo as bar};
   |                              ^^^

error: encountered a cycle during delegation signature resolution
  --> $DIR/recursive-delegation-errors.rs:43:42
   |
LL |     reuse super::fifth_mod::{bar as foo, foo as bar};
   |                                          ^^^

error: encountered a cycle during delegation signature resolution
  --> $DIR/recursive-delegation-errors.rs:48:27
   |
LL |         reuse GlobReuse::{foo as bar, bar as goo, goo as foo};
   |                           ^^^

error: encountered a cycle during delegation signature resolution
  --> $DIR/recursive-delegation-errors.rs:48:39
   |
LL |         reuse GlobReuse::{foo as bar, bar as goo, goo as foo};
   |                                       ^^^

error: encountered a cycle during delegation signature resolution
  --> $DIR/recursive-delegation-errors.rs:48:51
   |
LL |         reuse GlobReuse::{foo as bar, bar as goo, goo as foo};
   |                                                   ^^^

error[E0283]: type annotations needed
  --> $DIR/recursive-delegation-errors.rs:33:22
   |
LL |         reuse Trait::foo as bar;
   |                      ^^^ cannot infer type
   |
   = note: the type must implement `fourth_mod::Trait`

error[E0283]: type annotations needed
  --> $DIR/recursive-delegation-errors.rs:36:22
   |
LL |         reuse Trait::bar as foo;
   |                      ^^^ cannot infer type
   |
   = note: the type must implement `fourth_mod::Trait`

error[E0283]: type annotations needed
  --> $DIR/recursive-delegation-errors.rs:48:27
   |
LL |         reuse GlobReuse::{foo as bar, bar as goo, goo as foo};
   |                           ^^^ cannot infer type
   |
   = note: the type must implement `GlobReuse`

error[E0283]: type annotations needed
  --> $DIR/recursive-delegation-errors.rs:48:39
   |
LL |         reuse GlobReuse::{foo as bar, bar as goo, goo as foo};
   |                                       ^^^ cannot infer type
   |
   = note: the type must implement `GlobReuse`

error[E0283]: type annotations needed
  --> $DIR/recursive-delegation-errors.rs:48:51
   |
LL |         reuse GlobReuse::{foo as bar, bar as goo, goo as foo};
   |                                                   ^^^ cannot infer type
   |
   = note: the type must implement `GlobReuse`

warning: function cannot return without recursing
  --> $DIR/recursive-delegation-errors.rs:4:11
   |
LL |     reuse foo;
   |           ^^^
   |           |
   |           cannot return without recursing
   |           recursive call site
   |
   = help: a `loop` may express intention better if this is on purpose
   = note: `#[warn(unconditional_recursion)]` on by default

error: aborting due to 21 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0283`.
